<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wdecgrec="http://schemas.android.com/apk/res/com.broadchance.wdecgrec"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/register_com_top"
        android:layout_width="145dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/register_com_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/register_edittext_dark"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="#f4f4f4"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="#404040"
            android:textSize="20sp" />

        <com.broadchance.wdecgrec.widget.LabelEditText
            android:id="@+id/editTextUserName"
            style="@style/register_edittext"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/register_account_hint"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="70dp"
            android:singleLine="true"
            wdecgrec:labelcolor="#7c7c7c"
            wdecgrec:labelpaddingleft="10dp"
            wdecgrec:labeltext="@string/register_account_label"
            wdecgrec:labeltextsize="20sp" >

            <requestFocus />
        </com.broadchance.wdecgrec.widget.LabelEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center_vertical" >

            <ImageButton
                android:id="@+id/imageButtonGetToken"
                android:layout_width="106dp"
                android:layout_height="43dp"
                android:layout_marginLeft="70dp"
                android:background="@drawable/register_gettoken"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textViewLeftTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="60s"
                android:textColor="#fa7615"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/registerDelaySendMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_delay_sendmsg"
                android:textColor="#666666"
                android:textSize="17sp" />
        </LinearLayout>

        <com.broadchance.wdecgrec.widget.LabelEditText
            android:id="@+id/editTextToken"
            style="@style/register_edittext"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/register_token_hint"
            android:maxLength="8"
            android:paddingLeft="90dp"
            android:singleLine="true"
            wdecgrec:labelcolor="#7c7c7c"
            wdecgrec:labelpaddingleft="10dp"
            wdecgrec:labeltext="@string/register_token_label"
            wdecgrec:labeltextsize="20sp" />

        <com.broadchance.wdecgrec.widget.LabelEditText
            android:id="@+id/editTextPwd"
            style="@style/register_edittext"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/register_pwd_hint"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:paddingLeft="70dp"
            android:singleLine="true"
            wdecgrec:labelcolor="#7c7c7c"
            wdecgrec:labelpaddingleft="10dp"
            wdecgrec:labeltext="@string/register_pwd_label"
            wdecgrec:labeltextsize="20sp" />

        <com.broadchance.wdecgrec.widget.LabelEditText
            android:id="@+id/editTextConfirmPwd"
            style="@style/register_edittext"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/register_confirmpwd_hint"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:paddingLeft="110dp"
            android:singleLine="true"
            wdecgrec:labelcolor="#7c7c7c"
            wdecgrec:labelpaddingleft="10dp"
            wdecgrec:labeltext="@string/register_confirmpwd_label"
            wdecgrec:labeltextsize="20sp" />

        <com.broadchance.wdecgrec.widget.LabelEditText
            android:id="@+id/editTextID"
            style="@style/register_edittext"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:digits="0123456789Xx"
            android:hint="@string/register_ID_hint"
            android:inputType="none"
            android:maxLength="18"
            android:paddingLeft="90dp"
            android:singleLine="true"
            wdecgrec:labelcolor="#7c7c7c"
            wdecgrec:labelpaddingleft="10dp"
            wdecgrec:labeltext="@string/register_ID_label"
            wdecgrec:labeltextsize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5" >

        <CheckBox
            android:id="@+id/checkBoxAgreedAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/register_chk_selector" />

        <TextView
            android:id="@+id/agreementLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/register_agreed_agreement"
            android:textColor="@android:color/black"
            android:textSize="34sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonResetPwd"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_margin="20dp"
        android:background="@drawable/common_btnbg_green"
        android:text="@string/register_register"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>