<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:background="@drawable/dialog_title_bg"
            android:gravity="center"
            android:text="@string/dialog_title_devcheck"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_title_textsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_devcheck_token"
                android:textColor="@color/dialog_content"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextDevPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/dialog_devcheck_hint"
                android:text=""
                android:singleLine="true"
                android:textColor="@color/dialog_content"
                android:textColorHint="#B1B1B1"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/common_btnbg_green"
            android:text="@string/dialog_button_ok"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>