<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:background="@drawable/dialog_title_bg"
            android:gravity="center"
            android:text="@string/dialog_title_onekeyupload"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_title_textsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_onekeyupload_waitlabel"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewWaitUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_onekeyupload_unitlabel"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_onekeyupload_nowuploadlabel"
                android:textColor="@color/dialog_content"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCurUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/20"
                android:textColor="#006e2e"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_onekeyupload_forwait"
                android:textColor="@color/dialog_content"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>