<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_height"
            android:background="@drawable/dialog_title_bg"
            android:gravity="center"
            android:text="@string/dialog_title_tips"
            android:textColor="@color/dialog_title"
            android:textSize="@dimen/dialog_title_textsize" />

        <TextView
            android:id="@+id/textViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_cofirmreplacedevice"
            android:textColor="@color/dialog_content"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/buttonRecConfirm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/common_btnbg_green"
                android:text="@string/dialog_button_confirm"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonRecCancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/dialot_btnbg_grey"
                android:text="@string/dialog_button_cancel"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>